--- a/index.html
+++ b/index.html
@@ -1,186 +1,159 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>¿Quieres ser mi San Valentín?</title>
-  <style>
-    /* Fondo blanco (como pediste), pero cute */
-    :root{
-      --ink:#1f2937;
-      --muted:#6b7280;
-      --line:#e5e7eb;
-      --pink:#ff4d88;
-      --pink2:#ff85b3;
-      --soft:#fff7fb;
-    }
 
+  <style>
+    /* Fondo blanco, estilo cute, pero compatible */
     body{
       margin:0;
-      min-height:100vh;
-      display:grid;
-      place-items:center;
-      background:#fff;
-      color:var(--ink);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
       padding:24px;
+      background:#ffffff;
+      font-family: Arial, Helvetica, sans-serif;
+      color:#1f2937;
+    }
+
+    .wrap{
+      width:100%;
+      text-align:center;
+      margin-top:40px;
     }
 
     .card{
-      width:min(640px, 100%);
-      border:1px solid var(--line);
-      border-radius:22px;
-      padding:26px 22px;
-      box-shadow: 0 18px 40px rgba(17,24,39,.08);
+      width: 560px;
+      max-width: 92%;
+      margin: 0 auto;
+      background:#fff;
+      border:1px solid #e5e7eb;
+      border-radius:18px;
+      padding:22px 18px 18px 18px;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.08);
       position:relative;
       overflow:hidden;
-      background:#fff;
     }
-
-    /* Brillito suave, pero sigue siendo fondo blanco */
-    .card::before{
-      content:"";
-      position:absolute;
-      inset:-120px;
-      background:
-        radial-gradient(circle at 20% 10%, rgba(255,77,136,.18), transparent 40%),
-        radial-gradient(circle at 90% 25%, rgba(255,133,179,.12), transparent 45%),
-        radial-gradient(circle at 30% 90%, rgba(255,77,136,.08), transparent 40%);
-      pointer-events:none;
-    }
-
-    .content{ position:relative; }
 
     .badge{
-      width:52px;height:52px;border-radius:16px;
-      display:grid;place-items:center;
-      border:1px solid var(--line);
-      background: linear-gradient(135deg, rgba(255,77,136,.18), rgba(255,133,179,.10));
-      font-size:26px;
-      margin-bottom:12px;
+      width:52px;
+      height:52px;
+      border-radius:14px;
+      border:1px solid #e5e7eb;
+      display:inline-block;
+      line-height:52px;
+      font-size:24px;
+      background:#fff7fb;
+      margin-bottom:10px;
     }
 
     h1{
       margin:0;
-      font-size:28px;
-      letter-spacing:-0.02em;
+      font-size:26px;
       line-height:1.2;
     }
 
     .sub{
-      margin:10px 0 0;
-      color:var(--muted);
+      margin:10px 0 0 0;
       font-size:14px;
-      line-height:1.4;
+      color:#6b7280;
     }
 
-    .btns{
-      margin-top:20px;
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
+    .stage{
+      margin-top:18px;
+      border:1px dashed #f4c2d6;
+      background:#fffafb;
+      border-radius:14px;
+      padding:16px 12px;
+      position:relative;
+      height:110px; /* área donde se mueve el botón "No" */
     }
 
-    button{
-      appearance:none;
-      border:1px solid var(--line);
-      background:#fff;
+    .btn{
+      border:1px solid #e5e7eb;
+      background:#ffffff;
       padding:12px 16px;
       border-radius:14px;
-      font-weight:700;
+      font-weight:bold;
       cursor:pointer;
       font-size:15px;
-      transition: transform .08s ease, box-shadow .15s ease, border-color .15s ease;
       user-select:none;
     }
-    button:active{ transform: scale(.98); }
 
-    .yes{
-      border-color: rgba(255,77,136,.55);
-      background: linear-gradient(135deg, rgba(255,77,136,.20), rgba(255,133,179,.10));
-      box-shadow: 0 10px 20px rgba(255,77,136,.12);
+    .btn:active{
+      transform: scale(0.98);
     }
 
-    .no{
-      background: var(--soft);
+    .btnYes{
+      border-color:#ff7aaa;
+      background:#ffe8f2;
+      box-shadow: 0 8px 16px rgba(255,77,136,0.14);
+      position:relative;
+      z-index:2;
+    }
+
+    /* El NO será absoluto para poder moverlo */
+    .btnNo{
+      position:absolute;
+      left: 330px;
+      top: 38px;
+      background:#fff7fb;
+      z-index:1;
     }
 
     .msg{
-      margin-top:14px;
-      padding:12px 14px;
-      border-radius:14px;
-      border:1px solid var(--line);
-      background:#fff;
+      margin-top:12px;
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px solid #e5e7eb;
+      background:#ffffff;
       font-size:14px;
-      line-height:1.4;
       display:none;
+      text-align:left;
     }
 
-    .msg.error{
+    .msgError{
       display:block;
-      border-color: rgba(255,77,136,.35);
-      background: rgba(255,77,136,.06);
+      border-color:#ffb3cd;
+      background:#fff0f6;
     }
 
-    .msg.success{
+    .msgOk{
       display:block;
-      border-color: rgba(34,197,94,.35);
-      background: rgba(34,197,94,.06);
-    }
-
-    .shake{
-      animation: shake .35s ease-in-out;
-    }
-    @keyframes shake{
-      0%,100% { transform: translateX(0); }
-      20% { transform: translateX(-6px); }
-      40% { transform: translateX(6px); }
-      60% { transform: translateX(-4px); }
-      80% { transform: translateX(4px); }
-    }
-
-    /* Corazones flotando */
-    .hearts{
-      position:absolute;
-      inset:0;
-      pointer-events:none;
-      overflow:hidden;
-      display:none;
-    }
-    .hearts.show{ display:block; }
-    .heart{
-      position:absolute;
-      bottom:-30px;
-      font-size:22px;
-      opacity:0;
-      animation: floatUp 1.9s ease-in forwards;
-      filter: drop-shadow(0 8px 10px rgba(17,24,39,.12));
-    }
-    @keyframes floatUp{
-      0%   { transform: translateY(0) scale(.9); opacity:0; }
-      15%  { opacity:1; }
-      100% { transform: translateY(-520px) scale(1.25); opacity:0; }
+      border-color:#a7f3d0;
+      background:#ecfdf5;
     }
 
     .footer{
-      margin-top:14px;
+      margin-top:12px;
       font-size:12px;
-      color:var(--muted);
+      color:#6b7280;
+    }
+
+    /* “Temblor” simple compatible */
+    .shake{
+      animation: shake 0.35s ease-in-out;
+    }
+    @keyframes shake{
+      0%,100%{ transform: translateX(0); }
+      20%{ transform: translateX(-6px); }
+      40%{ transform: translateX(6px); }
+      60%{ transform: translateX(-4px); }
+      80%{ transform: translateX(4px); }
     }
   </style>
 </head>
-<body>
-  <div class="card" id="card">
-    <div class="hearts" id="hearts"></div>
 
-    <div class="content">
+<body>
+  <div class="wrap">
+    <div class="card" id="card">
       <div class="badge">💘</div>
       <h1>¿Quieres ser mi San Valentín?</h1>
-      <p class="sub">Sé honesto… pero también elige con sabiduría 😄</p>
+      <div class="sub">Pista: el “No” anda un poquito travieso 😄</div>
 
-      <div class="btns">
-        <button class="yes" id="yesBtn">Sí 💖</button>
-        <button class="no" id="noBtn">No 🙃</button>
+      <div class="stage" id="stage">
+        <button class="btn btnYes" id="yesBtn">Sí 💖</button>
+        <button class="btn btnNo" id="noBtn">No 🙃</button>
       </div>
 
       <div class="msg" id="msgBox"></div>
@@ -190,56 +163,89 @@
   </div>
 
   <script>
-    const card = document.getElementById("card");
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn  = document.getElementById("noBtn");
-    const msgBox = document.getElementById("msgBox");
-    const hearts = document.getElementById("hearts");
+    // Compatible con IE: usar var, funciones normales, sin template strings.
+    var card = document.getElementById("card");
+    var stage = document.getElementById("stage");
+    var yesBtn = document.getElementById("yesBtn");
+    var noBtn = document.getElementById("noBtn");
+    var msgBox = document.getElementById("msgBox");
 
-    function mostrarMensaje(texto, tipo){
-      msgBox.className = "msg " + tipo;
-      msgBox.textContent = texto;
+    var noTries = 0;
 
-      // Temblor para el "No"
-      card.classList.remove("shake");
-      void card.offsetWidth; // reinicia animación
-      if(tipo === "error") card.classList.add("shake");
-    }
+    function showMessage(text, type){
+      msgBox.className = "msg " + type;
+      msgBox.style.display = "block";
+      msgBox.innerHTML = text;
 
-    function lanzarCorazones(){
-      hearts.innerHTML = "";
-      hearts.classList.add("show");
-
-      const emojis = ["💖","💘","💕","💗","💓","❤️"];
-      const cantidad = 18;
-
-      for(let i=0;i<cantidad;i++){
-        const s = document.createElement("div");
-        s.className = "heart";
-        s.textContent = emojis[Math.floor(Math.random()*emojis.length)];
-        s.style.left = Math.floor(Math.random()*100) + "%";
-        s.style.animationDelay = (Math.random()*0.25) + "s";
-        s.style.fontSize = (18 + Math.random()*18) + "px";
-        hearts.appendChild(s);
+      // shake al error
+      card.className = card.className.replace(" shake", "");
+      // reiniciar animación
+      void card.offsetWidth;
+      if(type === "msgError"){
+        if(card.className.indexOf("shake") === -1){
+          card.className += " shake";
+        }
       }
-
-      setTimeout(() => hearts.classList.remove("show"), 2200);
     }
 
-    yesBtn.addEventListener("click", () => {
-      mostrarMensaje("¡¡SÍÍÍ!! 🥰💐 ¡Me haces muy feliz! 💖", "success");
-      lanzarCorazones();
+    function rand(min, max){
+      return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
 
-      // Opcional: deshabilitar botones después del sí
+    function moveNoButton(){
+      // Limites dentro del stage
+      var stageRect = stage.getBoundingClientRect();
+      var noRect = noBtn.getBoundingClientRect();
+
+      // Medidas aproximadas (para IE, mejor usar offsetWidth/offsetHeight)
+      var w = noBtn.offsetWidth;
+      var h = noBtn.offsetHeight;
+
+      var maxLeft = stage.clientWidth - w - 10;
+      var maxTop  = stage.clientHeight - h - 10;
+
+      var left = rand(10, (maxLeft < 10 ? 10 : maxLeft));
+      var top  = rand(10, (maxTop < 10 ? 10 : maxTop));
+
+      noBtn.style.left = left + "px";
+      noBtn.style.top = top + "px";
+    }
+
+    function makeYesBigger(){
+      // Crece un poquito cada intento de "No"
+      noTries++;
+      var scale = 1 + Math.min(noTries * 0.06, 0.36); // tope 1.36
+      // Para IE: usar zoom como fallback si transform no se siente estable
+      yesBtn.style.transform = "scale(" + scale + ")";
+    }
+
+    // Cuando pasan el mouse encima del NO, se mueve
+    noBtn.onmouseover = function(){
+      showMessage("Perdón… “No” no es una opción 😅 Intenta otra vez 💘", "msgError");
+      moveNoButton();
+      makeYesBigger();
+    };
+
+    // Si llegan a hacer click (por milagro), igual se mueve
+    noBtn.onclick = function(){
+      showMessage("Uy… casi 😄 Pero ‘No’ no es una opción 💘", "msgError");
+      moveNoButton();
+      makeYesBigger();
+      return false;
+    };
+
+    // Click en Sí
+    yesBtn.onclick = function(){
+      showMessage("¡¡SÍÍÍ!! 🥰💐 ¡Me haces muy feliz! 💖", "msgOk");
+      // deshabilitar para que quede “final”
       yesBtn.disabled = true;
       noBtn.disabled = true;
-      yesBtn.style.opacity = 0.85;
-      noBtn.style.opacity = 0.6;
-    });
+      yesBtn.style.opacity = "0.9";
+      noBtn.style.opacity = "0.6";
+    };
 
-    noBtn.addEventListener("click", () => {
-      mostrarMensaje("Perdón… “No” no es una opción 😅 Intenta otra vez 💘", "error");
-    });
+    // Posición inicial razonable del NO
+    moveNoButton();
   </script>
 </body>
 </html>
